--- a/src/html/example.html
+++ b/src/html/example.html
@@ -6,10 +6,10 @@
   <script src="//code.jquery.com/jquery-1.12.1.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/flot/0.8.3/jquery.flot.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.11.2/moment.min.js"></script>
-  <link rel="stylesheet" href="//wps1.dbnet.ece.ntua.gr/assets/fonts.css">
   <!-- Local -->
   <script src="<%= pkg.name %>.min.js"></script> 
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="fonts.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
