Provide a custom bundle of moment.js (with a subset of locales)

--- a/src/html/example.html
+++ b/src/html/example.html
@@ -5,9 +5,11 @@
   <!-- External -->
   <script src="//code.jquery.com/jquery-1.12.1.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/flot/0.8.3/jquery.flot.js"></script>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.11.2/moment.min.js"></script>
+  <!--<script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.11.2/moment.min.js"></script>-->
+  <!--<script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.12.0/moment-with-locales.min.js"></script>-->
   <!-- Local -->
   <script src="<%= pkg.name %>.min.js"></script> 
+  <script src="moment-localized.min.js"></script> 
   <link rel="stylesheet" href="fonts.css">
   <link rel="stylesheet" href="style.css">
 </head>
