Add support for dashed lines (per-series)

--- a/src/html/example.html
+++ b/src/html/example.html
@@ -11,7 +11,11 @@
   
   <!-- Local dependencies -->
   <script src="moment-localized.min.js"></script> <!-- moment.js bundled with a subset of locales --> 
+  <script src="flot-plugins.min.js"></script>
+  <!--
   <script src="flot-orderBars.js"></script>
+  <script src="flot-dashes.js"></script>
+  -->
   <script src="<%= pkg.name %>.js"></script> 
   <link rel="stylesheet" href="fonts.css"/>
   <link rel="stylesheet" href="style.css"/>
